ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
11/10/2018 Oleh Derevenko
        * An incorrect optimization to Jacobian Copy building code from #1938
          that resulted in corrupt data in multi-threaded execution mode was 
          fixed.

11/05/2018 Oleh Derevenko
        * An unintended change from commit #1898 has been reverted.
          The QuickStep used to solve with randomized constraint order 
          each 8th iteration. The other iterations, the constraints 
          were reset to their natural order, as generated, with the dependent
          constraints gathered in reverse order at end (the reverse order is 
          somehow important). With the commit #1898 the constraints were
          randomly reordered each 8th iteration but then remained 
          in that randomized order and only were re-randomized on subsequent
          multiples of 8.

10/09/2017 Markus Rickert
        * CMake support for project file generation has been added.

06/14/2017 Oleh Derevenko
        * dxHashSpace::collide() has been changed to fault host program 
          if scene gets too large and causes integer overflow.

06/06/2017 Oleh Derevenko
        * Memory and pointer size integer type use has been changed so that 
          internal typedefs are used instead of "_t" suffixed types.

05/09/2017 Oleh Derevenko
        * Introduction of cooperative algorithms API. 
          L*D*LT cooperative factorization and linear equation system 
          cooperative solving have been implemented.
        * AtomicReadReorderBarrier, AtomicStore, AtomicStorePointer functions 
          have been added and some atomic function implementations have been 
          improved in OU.
